# django-project-examples

./: README.md
hatch-example/: pyproject.toml
hatch-example/polls_tutorial/polls/: views.py
poetry-example/: pyproject.toml
poetry-example/polls_tutorial/polls/: views.py
uv-example/: pyproject.toml
uv-example/polls_tutorial/polls/: views.py
venv-example/: requirements.txt
venv-example/polls_tutorial/config/: settings.py
