[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-django-example"
version = "0.1.0"
description = ''
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["Django", "django-environ"]

[project.urls]
Source = "https://github.com/ftnext/django-project-examples/tree/main/hatch-example"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:polls_tutorial}"
