[tool.poetry]
name = "poetry-django-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
